XWIKI-3283: Hitting enter twice between 2 titles doesn't create new line in IE6 XWIKI-3282: Unwanted horizontal scrollbar in IE6 XWIKI-3281: Dialog box displays full width + unwanted scroll in IE6 XWIKI-3272: Cannot regain focus on the content area by clicking on it if it's empty in IE6 XWIKI-3051: After a JavaScript exception the editor stops working
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/web/trunk@17651 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/wysiwyg/src/main/resources/com/xpn/xwiki/wysiwyg/public/stylesheets/RichTextArea.css
+++ b/xwiki-platform-web/wysiwyg/src/main/resources/com/xpn/xwiki/wysiwyg/public/stylesheets/RichTextArea.css
@@ -1,17 +1,18 @@
-body {
-  background-image: none !important;
+html, body {
+  height: auto !important;
+}
+
+* html {
+  overflow-y: scroll;
 }
 
 body.main {
+  background-image: none !important;
+  margin: 0px !important;
+  min-width: 0 !important;
+  padding: 3px !important;
   position: static !important;
-  padding: 0px !important;
-  margin: 6px !important;
-  height: auto !important;
-  min-height: 0px !important;
-  max-height: none !important;
   width: auto !important;
-  min-width: 0px !important;
-  max-width: none !important;
 }
 
 /*
